Add handler for AdminCreateVolume
